--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -2,15 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:title="@string/home"
+        android:id="@+id/home"
         android:icon="@drawable/ic_launcher_foreground"
         />
     <item
         android:title="@string/favorites"
+        android:id="@+id/favorites"
         android:icon="@drawable/ic_launcher_foreground"/>
     <item
         android:title="@string/search"
+        android:id="@+id/search"
         android:icon="@drawable/ic_launcher_foreground"/>
     <item
         android:title="@string/trending"
+        android:id="@+id/trending"
         android:icon="@drawable/ic_launcher_foreground"/>
 </menu>
