--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/homeNav"
         android:title="@string/home"
         android:icon="@drawable/ic_launcher_foreground"
         />
     <item
+        android:id="@+id/favNav"
         android:title="@string/favorites"
         android:icon="@drawable/ic_launcher_foreground"/>
     <item
+        android:id="@+id/searchNav"
         android:title="@string/search"
         android:icon="@drawable/ic_launcher_foreground"/>
     <item
+        android:id="@+id/trendNav"
         android:title="@string/trending"
         android:icon="@drawable/ic_launcher_foreground"/>
 </menu>
