--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigationController"
-    app:startDestination="@id/gameBrowser">
+    app:startDestination="@id/loginScreen">
 
     <fragment
         android:id="@+id/gameBrowser"
@@ -22,4 +22,17 @@
             android:id="@+id/action_gameDetail_to_gameBrowser"
             app:destination="@id/gameBrowser" />
     </fragment>
+    <fragment
+        android:id="@+id/loginScreen"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.LoginScreen"
+        android:label="fragment_login_screen"
+        tools:layout="@layout/fragment_login_screen" >
+        <action
+            android:id="@+id/action_loginScreen2_to_gameBrowser"
+            app:destination="@id/gameBrowser" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
