updated login screen and added registration page
added stencil to create database that learns users
- updated stencil for the variables in registration page

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -35,4 +35,5 @@
         android:id="@+id/settingsFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.SettingsFragment"
         android:label="SettingsFragment" />
+        tools:layout="@layout/root_preferences">
 </navigation>
