--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/action_search"
-        android:title="Search"
-        android:icon="@drawable/ic_search_black_24dp"
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id ="@+id/action_search"
+        android:title = "Search"
+        android:icon="@drawable/ic_baseline_search_24"
         app:showAsAction="always|collapseActionView"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:actionViewClass="android.appcompat.widget.SearchView"
         />
-
 </menu>
