added repository for user profiles
must debug/ may redo the databases
will organize databases into their own files as well

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -35,5 +35,9 @@
         android:id="@+id/settingsFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.SettingsFragment"
         android:label="SettingsFragment" />
-        tools:layout="@layout/root_preferences">
+    <activity
+        android:id="@+id/signupActivity"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.SignupActivity"
+        android:label="SignupActivity" />
+    tools:layout="@layout/root_preferences">
 </navigation>
