--- a/app/src/main/res/layout/game_image_widget.xml
+++ b/app/src/main/res/layout/game_image_widget.xml
@@ -16,7 +16,8 @@
         android:layout_weight="1"
         app:srcCompat="@mipmap/ic_launcher"
         tools:ignore="ContentDescription"
-        android:padding="6dp"/>
+        android:padding="6dp"
+        android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/textView"
