--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,6 +21,13 @@
         <action
             android:id="@+id/action_gameDetail_to_gameBrowser"
             app:destination="@id/gameBrowser" />
+        <argument
+            android:name="gameTitle"
+            app:argType="string"
+            android:defaultValue="Example Title" />
+        <argument
+            android:name="imageUrl"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/favorites"
