Fix image scaling issues

--- a/app/src/main/res/layout/game_image_widget.xml
+++ b/app/src/main/res/layout/game_image_widget.xml
@@ -17,7 +17,8 @@
         app:srcCompat="@mipmap/ic_launcher"
         tools:ignore="ContentDescription"
         android:padding="6dp"
-        android:scaleType="fitXY"/>
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/textView"
