--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context="com.example.mydatabaseapp.register.RegisterFragment">
 
     <data>
         <variable
-            name="profileViewModel"
-            type="edu.fullerton.mobiledev.group5.gamefinder.ProfileViewModel" />
+            name="myViewModel"
+            type="edu.fullerton.mobiledev.group5.gamefinder.register.RegisterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        tools:context=".SignupActivity">
+        android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_heading"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create an Account"
@@ -31,7 +30,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_heading">
+            app:layout_constraintTop_toBottomOf="@id/textView">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -39,9 +38,8 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true">
 
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/layout_first_name"
+                    android:id="@+id/firstNameText"
                     android:layout_width="0dp"
                     app:layout_constraintWidth_percent="0.7"
                     android:layout_height="wrap_content"
@@ -52,12 +50,12 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <EditText
-                        android:id="@+id/et_first_name"
+                        android:id="@+id/first_name_text_field"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="First Name"
                         android:inputType="textPersonName"
-                        android:text="@={profileViewModel.et_first_name}"
+                        android:text="@={myViewModel.inputFirstName}"
                         android:gravity="center"
                         android:padding="10dp"
                         android:textColor="#000000"
@@ -66,9 +64,8 @@
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/layout_last_name"
+                    android:id="@+id/secondNameText"
                     android:layout_width="0dp"
                     app:layout_constraintWidth_percent="0.7"
                     android:layout_height="wrap_content"
@@ -76,15 +73,15 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="10dp"
                     android:textColorHint="#808080"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_first_name">
+                    app:layout_constraintTop_toBottomOf="@+id/firstNameText">
 
                     <EditText
-                        android:id="@+id/et_last_name"
+                        android:id="@+id/secondNameTextField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Last Name"
                         android:inputType="textPersonName"
-                        android:text="@={profileViewModel.et_last_name}"
+                        android:text="@={myViewModel.inputLastName}"
                         android:gravity="center"
                         android:padding="10dp"
                         android:textColor="#000000"
@@ -93,9 +90,8 @@
                         android:textSize="15sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/layout_email"
+                    android:id="@+id/userNameTextView"
                     android:layout_width="0dp"
                     app:layout_constraintWidth_percent="0.7"
                     android:layout_height="wrap_content"
@@ -103,25 +99,25 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="10dp"
                     android:textColorHint="#808080"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_last_name">
+                    app:layout_constraintTop_toBottomOf="@+id/secondNameText">
 
                     <EditText
-                        android:id="@+id/et_email"
+                        android:id="@+id/userNameTextField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Email"
+                        android:hint="User Name"
                         android:gravity="center"
                         android:padding="10dp"
                         android:textColor="#000000"
                         android:textColorHint="#808080"
                         android:backgroundTint="#808080"
                         android:textSize="15sp"
-                        android:inputType="textEmailAddress" />
+                        android:inputType="textPersonName"
+                        android:text="@={myViewModel.inputUsername}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/layout_password"
+                    android:id="@+id/passwordTextView"
                     android:layout_width="0dp"
                     app:layout_constraintWidth_percent="0.7"
                     android:layout_height="wrap_content"
@@ -129,10 +125,10 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="10dp"
                     android:textColorHint="#808080"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_email">
+                    app:layout_constraintTop_toBottomOf="@+id/userNameTextView">
 
                     <EditText
-                        android:id="@+id/et_password"
+                        android:id="@+id/passwordTextField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
@@ -142,58 +138,29 @@
                         android:textColorHint="#808080"
                         android:backgroundTint="#808080"
                         android:textSize="15sp"
-                        android:inputType="textPassword" />
+                        android:inputType="textPersonName"
+                        android:text="@={myViewModel.inputPassword}"/>
                 </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/layout_repeat_password"
-                    android:layout_width="0dp"
-                    app:layout_constraintWidth_percent="0.7"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="10dp"
-                    android:textColorHint="#808080"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_password">
-
-                    <EditText
-                        android:id="@+id/et_repeat_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Repeat Password"
-                        android:gravity="center"
-                        android:padding="10dp"
-                        android:textColor="#000000"
-                        android:textColorHint="#808080"
-                        android:backgroundTint="#808080"
-                        android:textSize="15sp"
-                        android:inputType="textPassword" />
-                </com.google.android.material.textfield.TextInputLayout>
-
 
                 <Button
-                    android:id="@+id/bt_register"
+                    android:id="@+id/submitButton"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    app:layout_constraintTop_toBottomOf="@+id/layout_repeat_password"
+                    app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:text="Sign Up"
-                    android:textColor="#FFFFFF"
                     android:textSize="15sp"
-                    android:background="@color/teal_700"
                     android:textAllCaps="false"
                     android:layout_marginTop="30dp"
                     app:layout_constraintWidth_percent="0.7"
                     style="?android:attr/borderlessButtonStyle"
                     android:elevation="2dp"
-                    android:onClick="performSignUp" />
+                    android:background="@color/purple_500"
+                    android:onClick="@{()->myViewModel.sumbitButton()}"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </ScrollView>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
