--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigationController"
-    app:startDestination="@id/loginScreen">
+    app:startDestination="@id/loginFragment">
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.register.RegisterFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_userDetailsFragment2"
+            app:destination="@id/userDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/userDetailsFragment"
+        android:name="edu.fullerton.mobiledev.group5.gamefinder.userDetails.UserDetailsFragment"
+        android:label="user_details_fragment"
+        tools:layout="@layout/fragment_user_details" >
+        <action
+            android:id="@+id/action_userDetailsFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/gameBrowser"
@@ -23,21 +55,9 @@
             app:destination="@id/gameBrowser" />
     </fragment>
     <fragment
-        android:id="@+id/loginScreen"
-        android:name="edu.fullerton.mobiledev.group5.gamefinder.LoginActivity"
-        android:label="fragment_login_screen"
-        tools:layout="@layout/fragment_login_screen" >
-        <action
-            android:id="@+id/action_loginScreen2_to_gameBrowser"
-            app:destination="@id/gameBrowser" />
-    </fragment>
-    <fragment
         android:id="@+id/settingsFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.SettingsFragment"
-        android:label="SettingsFragment" />
-    <activity
-        android:id="@+id/signupActivity"
-        android:name="edu.fullerton.mobiledev.group5.gamefinder.SignupActivity"
-        android:label="SignupActivity" />
+        android:label="SettingsFragment" /><![CDATA[
     tools:layout="@layout/root_preferences">
+]]>
 </navigation>
