--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -3,8 +3,7 @@
     <item
         android:id="@+id/homeNav"
         android:title="@string/home"
-        android:icon="@drawable/ic_baseline_home_24"
-        />
+        android:icon="@drawable/ic_baseline_home_24"/>
     <item
         android:id="@+id/favNav"
         android:title="@string/favorites"
