Fix toolbar theme and text spacing

--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -27,7 +27,15 @@
             android:text="@string/example_game"
             android:ellipsize="none"
             android:scrollHorizontally="false"
+            android:maxLines="1"
             android:textSize="48sp"
+            android:paddingTop="4dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeMaxTextSize="100sp"
+            app:autoSizeStepGranularity="2sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
