--- a/app/src/main/res/layout/game_image_widget.xml
+++ b/app/src/main/res/layout/game_image_widget.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="12dp">
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -24,5 +24,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:gravity="center"
+        android:hyphenationFrequency="none"
+        android:breakStrategy="simple"
+        app:autoSizeTextType="uniform"/>
 </LinearLayout>
