--- a/app/src/main/res/layout/game_image_widget.xml
+++ b/app/src/main/res/layout/game_image_widget.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="center_horizontal"
     android:gravity="center"
     android:orientation="vertical"
+    android:baselineAligned="false"
     android:padding="4dp">
 
     <ImageView
