--- a/app/src/main/res/layout/game_image_widget.xml
+++ b/app/src/main/res/layout/game_image_widget.xml
@@ -23,11 +23,14 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:hyphenationFrequency="none"
         android:breakStrategy="simple"
-        app:autoSizeTextType="uniform"/>
+        app:autoSizeTextType="uniform"
+        app:autoSizeMaxTextSize="18sp"
+        app:autoSizeMinTextSize="12sp"
+        app:autoSizeStepGranularity="1sp"/>
 </LinearLayout>
