--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,13 +2,13 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/gameBrowser">
+    app:startDestination="@id/loginFragment">
 
 
     <fragment
         android:id="@+id/registerFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.register.RegisterFragment"
-        android:label="HomeFragment"
+        android:label="Registration"
         tools:layout="@layout/fragment_register" >
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
@@ -17,14 +17,14 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.login.LoginFragment"
-        android:label="fragment_login"
+        android:label="Login"
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_userDetailsFragment2"
-            app:destination="@id/userDetailsFragment" />
+            app:destination="@id/gameBrowser" />
     </fragment>
 
     <fragment
