--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.register.RegisterFragment"
-        android:label="HomeFragment"
-        tools:layout="@layout/fragment_register" >
+        android:label="Register"
+        tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
@@ -17,8 +17,8 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        android:label="@string/login"
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/registerFragment" />
@@ -30,8 +30,8 @@
     <fragment
         android:id="@+id/userDetailsFragment"
         android:name="edu.fullerton.mobiledev.group5.gamefinder.userDetails.UserDetailsFragment"
-        android:label="user_details_fragment"
-        tools:layout="@layout/fragment_user_details" >
+        android:label="User Details"
+        tools:layout="@layout/fragment_user_details">
         <action
             android:id="@+id/action_userDetailsFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
@@ -46,6 +46,12 @@
         <action
             android:id="@+id/action_gameBrowser_to_gameDetail"
             app:destination="@id/gameDetail"/>
+        <action
+            android:id="@+id/action_gameBrowser_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_gameBrowser_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameDetail"
